--- a/FlockConnect/.vscode/settings.json
+++ b/FlockConnect/.vscode/settings.json
@@ -52,5 +52,8 @@
         "ProjectSettings/":true,
         "temp/":true,
         "Temp/":true
-    }
+    },
+    "editor.trimAutoWhitespace": false,
+    "editor.formatOnType": true,
+    "editor.formatOnSave": true
 }
