--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
-Assets/AssetStoreTools*
+Assets/AssetStoreTools*/Assets/Fonts*
 
 # Visual Studio cache directory
 .vs/
