--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
-[Bb]uilds/
-Assets/AssetStoreTools*/Assets/Fonts*
-
+[Bb]uilds/Assets/AssetStoreTools*
 # Visual Studio cache directory
 .vs/
 
